# task_stakewolle

./: .gitignore  pyproject.toml  sql_app.db
app/: crud.py  database.py  main.py  models.py  schemas.py
migrations/: env.py
migrations/versions/: 3d1d2f75f290_updated_active_code_field_in_users.py  4321c53a2018_added_password_for_users_table.py  631cf891bb1d_updated_expiry_and_created_dates_in_.py  7077672d851a_updated_field_expiry_date.py  8821a05822ce_updated_users_table.py  9f0e210c0666_updated_created_date_in_users.py  bbf0c57b930e_updated_expiry_date_field_in_users.py  fbd8ecdaf424_database_creation.py
