[tool.poetry]
name = "task-stakewolle"
version = "0.1.0"
description = ""
authors = ["daoolet-HON <dauletkhabidullin@gmail.com>"]
readme = "README.md"
packages = [{include = "task_stakewolle"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
python-jose = "^3.3.0"
alembic = "^1.13.1"
sqlalchemy = "^2.0.28"
attrs = "^23.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
